--- a/css/resume.css
+++ b/css/resume.css
@@ -92,6 +92,15 @@ section.resume-section {
   section.resume-section .resume-item .resume-date {
     min-width: none; }
 
+#education.resume-section {
+  padding-top: 2rem !important; /* Reduced top padding */
+  padding-bottom: 2rem !important; /* Reduced bottom padding */
+}
+
+#education .resume-item {
+  font-size: 0.85em; /* Smaller font size for items */
+}
+
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh; }
