--- a/css/resume.css
+++ b/css/resume.css
@@ -40,14 +40,14 @@ h2 {
 .list-social-icons a {
   color: #495057; }
   .list-social-icons a:hover {
-    color: #BD5D38; }
+    color: #2C7ABD; }
   .list-social-icons a .fa-lg {
     font-size: 1.75rem; }
 
 .list-icons {
   font-size: 3rem; }
   .list-icons .list-inline-item i:hover {
-    color: #BD5D38; }
+    color: #2C7ABD; }
 
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 600;
@@ -116,9 +116,9 @@ section.resume-section {
   background-color: #BD5D38 !important; }
 
 .text-primary {
-  color: #BD5D38 !important; }
+  color: #2C7ABD !important; }
 
 a {
-  color: #BD5D38; }
+  color: #2C7ABD; }
   a:hover, a:focus, a:active {
     color: #824027; }
