--- a/css/resume.css
+++ b/css/resume.css
@@ -113,12 +113,12 @@ section.resume-section {
     padding-bottom: 3rem !important; } }
 
 .bg-primary {
-  background-color: #1383b5 !important; }
+  background-color: #1383B5 !important; }
 
 .text-primary {
-  color: #1383b5 !important; }
+  color: #1383B5 !important; }
 
 a {
-  color: #1383b5; }
+  color: #1383B5; }
   a:hover, a:focus, a:active {
     color: #824027; }
